--- a/css/main.css
+++ b/css/main.css
@@ -95,12 +95,12 @@ img {
   display: flex;
   align-items: center;
 }
-.header-nav-list {
+.header-nav__list {
   display: flex;
   margin-left: 93px;
   gap: 50px;
 }
-.header-contact-list {
+.header-contact {
   display: flex;
   margin-left: auto;
 }
@@ -110,7 +110,7 @@ img {
   align-items: center;
 }
 
-.header-nav-link {
+.header-nav__link {
   display: block;
   padding-bottom: 32px;
   padding-top: 32px;
@@ -121,15 +121,15 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--primary-text-color);
 }
-.header-nav-link:hover, .header-nav-link:focus {
+.header-nav__link:hover, .header-nav__link:focus {
   color: var(--accent-color);
 }
 
-.header-contact-item + .header-contact-item {
+.header-contact__item + .header-contact__item {
   margin-left: 50px;
 }
 
-.header-contact-link {
+.header-contact__link {
   display: inline-flex;
   padding: 32px 0px 32px;
   align-items: center;
@@ -139,7 +139,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--secondary-text-color);
 }
-.header-contact-link:hover, .header-contact-link:focus {
+.header-contact__link:hover, .header-contact__link:focus {
   color: var(--accent-color);
 }
 
@@ -147,14 +147,14 @@ img {
   margin-right: 10px;
   fill: currentColor;
 }
-.header-contact-link:focus .contact-icon, .header-contact-link:hover .contact-icon {
+.header-contact__link:focus .contact-icon, .header-contact__link:hover .contact-icon {
   fill: var(--accent-color);
 }
 
-.header-nav-link.current {
+.header-nav__link.current {
   color: var(--accent-color);
 }
-.header-nav-link.current::after {
+.header-nav__link.current::after {
   position: absolute;
   display: block;
   content: "";
@@ -341,33 +341,33 @@ img {
   background-color: var(--accent-color);
 }
 
-.client-section {
+.client {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.client-title {
+.client__title {
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
 }
 
-.client-list {
+.client__list {
   display: flex;
   gap: 30px;
 }
 
-.client-item {
+.client__item {
   width: calc((100% - 150px) / 6);
   height: 92px;
 }
-.client-item:hover, .client-item:focus {
+.client__item:hover, .client__item:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.client-link {
+.client__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -377,15 +377,15 @@ img {
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.client-link:hover, .client-link:focus {
+.client__link:hover, .client__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.client-icon {
+.client__icon {
   fill: #afb1b8;
 }
-.client-link:hover .client-icon, .client-link:focus .client-icon {
+.client__link:hover .client__icon, .client__link:focus .client__icon {
   fill: var(--accent-color);
   border-color: var(--accent-color);
 }
@@ -401,7 +401,7 @@ img {
   padding: 0;
   list-style: none;
 }
-.footer-social-text {
+.footer-social__text {
   padding: 20px 0px 10px 0px;
   margin-bottom: 20px;
   font-weight: 700;
@@ -410,11 +410,11 @@ img {
   text-transform: uppercase;
   color: var(--white-back-text-color);
 }
-.footer-social-flex {
+.footer-social {
   margin-left: 70px;
   width: 206px;
 }
-.footer-social-list {
+.footer-social__list {
   display: flex;
   padding: 0;
   margin-top: 0;
@@ -422,20 +422,20 @@ img {
   gap: 10px;
   align-items: center;
 }
-.footer-social-item {
+.footer-social__item {
   width: calc((100% - 30px) / 4);
   height: 44px;
 }
-.footer-social-icon {
+.footer-social__icon {
   fill: var(--white-back-text-color);
 }
-.footer-contacts {
+.footer-contact {
   margin-top: 20px;
 }
 .footer-submit {
   margin-left: 93px;
 }
-.footer-submit-text {
+.footer-submit__text {
   padding: 20px 0px 10px 0px;
   margin-bottom: 20px;
   font-weight: 700;
@@ -444,20 +444,20 @@ img {
   color: var(--white-back-text-color);
 }
 
-.footer-contact-link {
+.footer-contact__link {
   font-style: normal;
   line-height: 1.71;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--footer-text-color);
 }
-.footer-contact-link:hover, .footer-contact-link:focus {
-  color: var(--accent-color);
-}
-.footer-contact-link.address {
+.footer-contact__link.address {
   color: var(--white-back-text-color);
 }
+.footer-contact__link:hover, .footer-contact__link:focus {
+  color: var(--accent-color);
+}
 
-.footer-social-link {
+.footer-social__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -468,19 +468,19 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-link:hover, .footer-social-link:focus {
+.footer-social__link:hover, .footer-social__link:focus {
   color: #ffffff;
   background-color: var(--accent-color);
 }
 
-.footer-contact-item {
+.footer-contact__item {
   margin-top: 9px;
 }
-.footer-contact-item:first-child {
+.footer-contact__item:first-child {
   margin-top: 0;
 }
 
-.footer-submit-input {
+.footer-submit__input {
   width: 358px;
   margin: 0;
   padding: 15px 16px;
@@ -489,23 +489,23 @@ img {
   background-color: var(--hero-background-color);
   color: var(--footer-text-color);
 }
-.footer-submit-input::-moz-placeholder {
+.footer-submit__input::-moz-placeholder {
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer-submit-input:-ms-input-placeholder {
+.footer-submit__input:-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer-submit-input::placeholder {
+.footer-submit__input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-submit-btn {
+.footer-submit__btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -526,7 +526,7 @@ img {
   cursor: pointer;
 }
 
-.footer-submit-form {
+.footer-submit__form {
   display: flex;
   align-items: center;
   gap: 12px;
@@ -594,7 +594,7 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover .portfolio-overlay, .portfolio-item:focus .portfolio-overlay {
+.portfolio-link:hover .portfolio-overlay, .portfolio-link:focus .portfolio-overlay {
   transform: translateY(0);
 }
 
@@ -724,11 +724,15 @@ img {
   border-color: var(--accent-color);
 }
 
+.imput-wrap {
+  position: relative;
+}
+
 .input-icon {
   position: absolute;
   top: 50%;
   left: 15px;
-  transform: translateY(8%);
+  transform: translateY(-50%);
   display: inline-block;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
