--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -95,11 +95,15 @@
   }
 }
 
+.imput-wrap {
+  position: relative;
+}
+
 .input-icon {
   position: absolute;
   top: 50%;
   left: 15px;
-  transform: translateY(8%);
+  transform: translateY(-50%);
   display: inline-block;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .form-input:hover ~ &,
