--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -8,7 +8,7 @@
     padding: 0;
     list-style: none;
   }
-  &-social-text {
+  &-social__text {
     padding: 20px 0px 10px 0px;
     margin-bottom: 20px;
     font-weight: 700;
@@ -17,11 +17,11 @@
     text-transform: uppercase;
     color: var(--white-back-text-color);
   }
-  &-social-flex {
+  &-social {
     margin-left: 70px;
     width: 206px;
   }
-  &-social-list {
+  &-social__list {
     display: flex;
     padding: 0;
     margin-top: 0;
@@ -29,20 +29,20 @@
     gap: 10px;
     align-items: center;
   }
-  &-social-item {
+  &-social__item {
     width: calc((100% - 30px) / 4);
     height: 44px;
   }
-  &-social-icon {
+  &-social__icon {
     fill: var(--white-back-text-color);
   }
-  &-contacts {
+  &-contact {
     margin-top: 20px;
   }
   &-submit {
     margin-left: 93px;
   }
-  &-submit-text {
+  &-submit__text {
     padding: 20px 0px 10px 0px;
     margin-bottom: 20px;
     font-weight: 700;
@@ -52,21 +52,21 @@
   }
 }
 
-.footer-contact-link {
+.footer-contact__link {
   font-style: normal;
   line-height: 1.71;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--footer-text-color);
+  &.address {
+    color: var(--white-back-text-color);
+  }
   &:hover,
   &:focus {
     color: var(--accent-color);
   }
-  &.address {
-    color: var(--white-back-text-color);
-  }
 }
 
-.footer-social-link {
+.footer-social__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -84,14 +84,14 @@
   }
 }
 
-.footer-contact-item {
+.footer-contact__item {
   margin-top: 9px;
   &:first-child {
     margin-top: 0;
   }
 }
 
-.footer-submit-input {
+.footer-submit__input {
   width: 358px;
   margin: 0;
   padding: 15px 16px;
@@ -106,7 +106,7 @@
   }
 }
 
-.footer-submit-btn {
+.footer-submit__btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -127,7 +127,7 @@
   cursor: pointer;
 }
 
-.footer-submit-form {
+.footer-submit__form {
   display: flex;
   align-items: center;
   gap: 12px;
