--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -4,12 +4,12 @@
     display: flex;
     align-items: center;
   }
-  &-nav-list {
+  &-nav__list {
     display: flex;
     margin-left: 93px;
     gap: 50px;
   }
-  &-contact-list {
+  &-contact {
     display: flex;
     margin-left: auto;
   }
@@ -20,7 +20,7 @@
   align-items: center;
 }
 
-.header-nav-link {
+.header-nav__link {
   display: block;
   padding-bottom: 32px;
   padding-top: 32px;
@@ -37,11 +37,11 @@
   }
 }
 
-.header-contact-item + .header-contact-item {
+.header-contact__item + .header-contact__item {
   margin-left: 50px;
 }
 
-.header-contact-link {
+.header-contact__link {
   display: inline-flex;
   padding: 32px 0px 32px;
   align-items: center;
@@ -60,13 +60,13 @@
 .contact-icon {
   margin-right: 10px;
   fill: currentColor;
-  .header-contact-link:focus &,
-  .header-contact-link:hover & {
+  .header-contact__link:focus &,
+  .header-contact__link:hover & {
     fill: var(--accent-color);
   }
 }
 
-.header-nav-link.current {
+.header-nav__link.current {
   color: var(--accent-color);
   &::after {
     position: absolute;
