--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -61,8 +61,8 @@
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .portfolio-item:hover &,
-  .portfolio-item:focus & {
+  .portfolio-link:hover &,
+  .portfolio-link:focus & {
     transform: translateY(0);
   }
 }
